Add MaxLines on EditText

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
     <EditText
         android:id="@+id/edit_email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:maxLines="1" />
 
     <TextView
         android:layout_width="match_parent"
@@ -25,7 +26,8 @@
     <EditText
         android:id="@+id/edit_subject"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:maxLines="1" />
 
     <TextView
         android:layout_width="match_parent"
@@ -36,7 +38,7 @@
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minLines="5" />
+        android:maxLines="5" />
 
     <Button
         android:id="@+id/button_send"
